--- a/Chess_Clock.dproj
+++ b/Chess_Clock.dproj
@@ -128,6 +128,7 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="clock_tick_rules\u_clock_intf.pas"/>
+        <DCCReference Include="clock_tick_rules\u_clock_impl.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
